--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.2.2",
   "private": true,
   "dependencies": {
-    "lodash": "4.17.5",
+    "lodash": "^4.17.15",
     "material-ui": "1.0.0-beta.36",
-    "material-ui-icons": "1.0.0-beta.36",
+    "material-ui-icons": "^1.0.0-beta.36",
     "normalize.css": "8.0.0",
     "raven-js": "3.23.1",
-    "react": "16.2.0",
+    "react": "^16.2.0",
     "react-copy-to-clipboard": "5.0.1",
     "react-dom": "16.2.0",
     "react-ga": "2.4.1",
